// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blocks Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Blocks — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container blocks-table data-card__table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell align-left"
            >
              Block
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Gas
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Txn(s)
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Rewards (Dusk)
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=3d43be31a8cb5d3f61b4e8391800a01033d650b11c4c874210dbaa3c118474a6"
              >
                1,365,454
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:54.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=2bc290511be774ec9c04e6c0ceb2469798242b997422c542a7d6b0b6f3368414"
              >
                1,365,453
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:51.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=02f38d2e2a986cf77a70e8fe4f333ef9c5e075987891f3f526c8a57590800178"
              >
                1,365,452
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:47.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=c79e31ce8e6133ebfb0d85649a12167769ddc83420550faebc536e613d74d676"
              >
                1,365,451
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:45.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=22ffe1b159e1b33b06d566b3ce3119af6f4bec4d2a3f6916560fe3cb30fcc1ef"
              >
                1,365,450
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:42.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=79c2d3213df80f8113d1ca16c49b1818fb5c31d1437e0a447719491a9c1b5f85"
              >
                1,365,449
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:39.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=fb3e82e43b141409156f935afc69ccb09a59a72a10258401b539123981db571c"
              >
                1,365,448
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:35.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=4b402a917bf42561096a9224e6451b77b8cbdc50272013442eccb5fcc542ef12"
              >
                1,365,447
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:32.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=38d069620a7cbad7cadb10ecc797b1344284b6324ac85f5e126226a08d47398a"
              >
                1,365,446
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:29.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface block__link"
                href="/some-base-path/blocks/block?id=14c7d9f5e44d599a167d82a449d73daf54e32bf002c6cd5893de5f904024922a"
              >
                1,365,445
              </a>
               
              <time
                class="dusk-relative-time block__time"
                datetime="2024-05-28T14:26:24.000Z"
              >
                yesterday
              </time>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="block__fee-avg-label"
              >
                AVG PRICE:
              </b>
               
              0
              <br />
               
              <b
                class="block__fee-total-label"
              >
                USED:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              16
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Blocks Card > should disable the \`Show More\` button is the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Blocks — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Blocks Card > should hide the \`Show More\` button if an error has occurred 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Blocks — 0 Displayed Items
    </h1>
     
  </header>
   
  <div
    class="alert"
  >
    <svg
      class="dusk-icon dusk-icon--size--large"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
      />
    </svg>
    
     
    <header>
      <p>
        There was an error fetching the data.
      </p>
       
      <p
        class="alert__error-message"
      >
        error
      </p>
    </header>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Retry
      </span>
    </button>
  </div>
  
   
</div>
`;

exports[`Blocks Card > should render the \`BlocksCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Blocks — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
